[metadata]
name = myla
version = attr: myla._version.VERSION
author = shellc
author_email = shenggong.wang@gmail.com
description = A local implementation of OpenAI Assistants API: Myla stands for MY Local Assistant
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
url = https://github.com/muyuworks/myla
keywords = AI assistant, LLM, Myla, chatbot
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.9
packages = find:
install_requires = file: requirements.txt
include_package_data = True

[options.package_data]
* = *.json, *.yml, *.yaml, *.png, webui/**

[options.entry_points]
console_scripts =
    myla = myla.__main__:main

[options.extras_require]

[options.packages.find]
exclude =
    tests/*

[tool.isort]
multi_line_output = 3

[flake8]
per-file-ignores =
    # imported but unused
    __init__.py: F401
max-line-length = 120
select =
    E9,
    E101,
    E111,
    E117,
    E127,
    E201,
    E202,
    E223,
    E224,
    E225,
    E231,
    E242,
    E251,
    E273,
    E274,
    E275,
    E301,
    E302,
    E303,
    E304,
    E305,
    E401,
    E703,
    E901,
    E999,
    F7,
    F63,
    F82,
    F401,
    F811,
    F821,
    F822,
    F823,
    F841,
    W191,
    W291,
    W292,
    W293,
    W391,
    W601,
    W602,
    W603,
    W604,
    W605
exclude =
    __init__.py
    __pycache__
    .git/
    .github/
    build/
    ci/
    dist/
    docs/
    js/